--- a/src/styles/home-cta.css
+++ b/src/styles/home-cta.css
@@ -57,6 +57,8 @@
 }
 
 .cta-content {
+  position: relative;
+  z-index: 2;
   display: flex;
   flex-direction: column;
   align-items: center;
